--- a/project/QuickDirTree.csproj
+++ b/project/QuickDirTree.csproj
@@ -7,9 +7,10 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
+  
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="ReactiveProperty" Version="9.7.0" />
   </ItemGroup>
 
 </Project>
