--- a/project/QuickDirTree.csproj
+++ b/project/QuickDirTree.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <NoWarn>$(NoWarn);WFO5001</NoWarn>
   </PropertyGroup>
   
   <ItemGroup>
